Fix font color for buttons on mobile

--- a/style.css
+++ b/style.css
@@ -133,6 +133,7 @@ a:link, a:visited {
     }
 
     button {
+        color: black;
         border-radius: 8px;
         font-size: 35px;
     }
